rust/oxide_generator_rs/tests/ui/fail_reducer_missing_args.stderr
error: #[reducer] is missing `engine = <Name>`
 --> tests/ui/fail_reducer_missing_args.rs:8:1
  |
8 | #[reducer(snapshot = MissingSnapshot, initial = (), no_frb)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `reducer` (in Nightly builds, run with -Z macro-backtrace for more info)
